--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ pre-commit = "*"
 black = "*"
 
 [packages]
-"discord.py" = "*"
+"discord.py" = "==1.7.3"
 python-dotenv = "*"
 colorama = "*"
 jishaku = "*"
