Add option in shared.end to disable jishaku for production

--- a/shared.env
+++ b/shared.env
@@ -24,3 +24,9 @@ MENTION_PREFIX=true
 # A discord Channel ID to send command error tracebacks to.
 # This will be overwritten by a database configuration value in future.
 ERROR_CHANNEL_ID=816787655089061908
+
+# Whether to use jishaku as a cog (https://jishaku.readthedocs.io/en/latest/). Boolean.
+# Jishaku is a debug and diagnostic extension to discord.py useful for development.
+# This is only checked at bot launch, and no adjustment will be made if later changed.
+JSK_ENABLED=true
+
