Install tortoise and introduce optional database connection logic

--- a/shared.env
+++ b/shared.env
@@ -30,3 +30,7 @@ ERROR_CHANNEL_ID=816787655089061908
 # This is only checked at bot launch, and no adjustment will be made if later changed.
 JSK_ENABLED=true
 
+# Whether to attempt connection to the database specified under DB_URL in secret.env
+# Boolean.
+# This is only checked at bot launch, and no adjustment will be made if later changed.
+DB_ENABLED=true
